# Toy-Neural-Network-C

./: .clang-format  .clang-tidy  .deepsource.toml  .gitignore  .gitlab-ci.yaml  .lgtm.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  Matrix.hpp  README.md  build.bat  build.sh  cmake.yml  configure.bat  configure.sh  install-dependencies.sh  matrix.c  matrix.h  nn.c  nn.h  nn.hpp  notes  vnepogodin_nn.natvis  wsjcpp.yml
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  macos.yml  opencl.yml  simd.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: benchmarks.cpp
cmake/: config.cmake.in  pkg-config-c-single_include.pc.in  pkg-config-c.pc.in  pkg-config-single_include.pc.in  pkg-config.pc.in
examples/mnist/: CMakeLists.txt  header.hpp  main.cpp  mnist.cpp  mnist.hpp  sdl_surface.hpp  sdl_texture.hpp
examples/mnist/data_view/: arch.h  data_view.cc  data_view.h  export.h
include/c/: matrix.h  nn.h
include/c++/: Matrix.hpp  nn.hpp
include/c++/vnepogodin/: Matrix.hpp  helper.hpp  nn.hpp
include/c/vnepogodin/: matrix.h  nn.h
single_include/c++/: nn.hpp
single_include/c++/vnepogodin/: nn.hpp
single_include/c/vnepogodin/: nn.h
src/c/: CMakeLists.txt  Makefile  build.sh  matrix.c  matrix.h  nn.c  nn.h
src/c++/: CMakeLists.txt  Makefile  Matrix.cpp  Matrix.hpp  nn.cpp  nn.hpp
src/c++/cmake/: CompilerWarnings.cmake
src/c++/tests/: CMakeLists.txt  init.cpp  json_deserialize.cpp  json_serialize.cpp  nn_copy.cpp  nn_predict.cpp  nn_train.cpp
src/c++/tests/src/: unit-init.cpp  unit-json_deserialize.cpp  unit-json_serialize.cpp  unit-matrix.cpp  unit-nn_copy.cpp  unit-nn_predict.cpp  unit-nn_train.cpp  unit.cpp
src/c/cmake/: CompilerWarnings.cmake
src/c/tests/: CMakeLists.txt  init.c  json_deserialize.c  json_serialize.c  nn_copy.c  nn_predict.c  nn_train.c
src/c/tests/src/: test-load.json  test-load_many.json  unit-init.c  unit-json_deserialize.c  unit-json_serialize.c  unit-matrix.c  unit-nn_copy.c  unit-nn_train.c
